@@ -22,11 +22,11 @@ Export the currently un-exported symbols they depend on.
 
 --- a/fs/file.c
 +++ b/fs/file.c
-@@ -809,6 +809,7 @@ out_unlock:
- 	*res = NULL;
- 	return -ENOENT;
+@@ -823,6 +823,7 @@ int close_fd_get_file(unsigned int fd, s
+ 
+ 	return ret;
  }
-+EXPORT_SYMBOL(__close_fd_get_file);
++EXPORT_SYMBOL(close_fd_get_file);
  
  void do_close_on_exec(struct files_struct *files)
  {
@@ -42,17 +42,17 @@ Export the currently un-exported symbols they depend on.
  
 --- a/kernel/task_work.c
 +++ b/kernel/task_work.c
-@@ -68,6 +68,7 @@ int task_work_add(struct task_struct *ta
+@@ -57,6 +57,7 @@ int task_work_add(struct task_struct *ta
  
  	return 0;
  }
 +EXPORT_SYMBOL(task_work_add);
  
  /**
-  * task_work_cancel - cancel a pending work added by task_work_add()
+  * task_work_cancel_match - cancel a pending work added by task_work_add()
 --- a/mm/memory.c
 +++ b/mm/memory.c
-@@ -1567,6 +1567,7 @@ void zap_page_range(struct vm_area_struc
+@@ -1578,6 +1578,7 @@ void zap_page_range(struct vm_area_struc
  	mmu_notifier_invalidate_range_end(&range);
  	tlb_finish_mmu(&tlb, start, range.end);
  }
