@@ -166,6 +166,7 @@ linux (5.10.162-1) UNRELEASED; urgency=medium
   [ Salvatore Bonaccorso ]
   * linux-kbuild: Include scripts/pahole-flags.sh (Closes: #1008501)
   * Bump ABI to 21
+  * Refresh "Export symbols needed by Android drivers"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 30 Dec 2022 13:49:35 +0100
 
